# zetacalc

./: #zetacalc.cc#  INSTALL  Makefile  Makefile.in  README.md  TODO  config.status  configure  configure.ac  devicequery.cu  script_aws.sh  zetacalc.cc
include/: config.h  config.h.in  gpu.h  log.h  main_sum.h  misc.h  quad-imp.h  quad-mpfr.h  quad.h  table.h  theta_sums.h
main_sum/: main_sum.cc  md5.cc  serialization.cc  stage2.cc  stage2.s  stage2_gpu.cc  stage2_gpu.cu
theta_sums/: G_functions.cc  H_and_J_integrals.cc  H_functions.cc  precomputed_tables.h  theta_algorithm.cc  theta_sums.cc
